==> Ursadon/nRIP24/examples/stm32f103c8/NRF24/nrf24.c <==
#include "stm32f10x_spi.h"
#include "stm32f10x_gpio.h"
#include "nRF24L01.h"
#include "RF24_config.h"
#include "nrf24.h"
#include "string.h"

void csn(uint8_t mode)
{

		if (mode == HIGH) {
			GPIO_SetBits(GPIOA, GPIO_Pin_4);
		}
		else {
			GPIO_ResetBits(GPIOA, GPIO_Pin_4);
		}
}

void ce(uint8_t level)
{
	if (level == HIGH) {
		GPIO_SetBits(GPIOA, GPIO_Pin_3);
	}
	else {
		GPIO_ResetBits(GPIOA, GPIO_Pin_3);
	}
}
